# GAN-Experiments

./: .gitignore  GAN_MNIST.ipynb  LICENSE  README.md  activation_extractor.py  arch_viz.py  cka.py  dashboard.html  generate_manifest.py  index.html  intrinsic_dim.py  manifest.js  model.py  models.js  parzen_eval.py  pyproject.toml  requirements.txt  train.py  utils.py  wgan_model.py  wgan_train.py
logs/: experiments.json  training_log.csv  wgan_training_log.csv
