[project]
name = "gan-mnist"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "numpy>=2.2.0",
    "matplotlib>=3.10.0",
    "Pillow>=11.1.0",
    "tqdm>=4.67.0",
    "ipywidgets>=8.1.0",
    "jupyter>=1.1.0",
    "jupyterlab>=4.3.0",
]
